# botocore-types

./: .ignore  CHANGELOG.md  README.md  botocore-stubs  notes.md  package.json  pyproject.toml  pyrightconfig.json  tox.ini
.circleci/: config.yml
s/: lint
tests/: test_boto.py
typings/botocore/: __init__.pyi  args.pyi  awsrequest.pyi  client.pyi  compat.pyi  config.pyi  configprovider.pyi  credentials.pyi  discovery.pyi  endpoint.pyi  exceptions.pyi  handlers.pyi  history.pyi  hooks.pyi  httpsession.pyi  loaders.pyi  model.pyi  monitoring.pyi  paginate.pyi  parsers.pyi  regions.pyi  response.pyi  retryhandler.pyi  serialize.pyi  session.pyi  signers.pyi  stub.pyi  translate.pyi  utils.pyi  validate.pyi  waiter.pyi
typings/botocore/retries/: adaptive.pyi  special.pyi  standard.pyi
